<resources>
    <string name="app_name">Sugaryzer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_news">News</string>
    <string name="logout">Log out</string>
    <string name="profile">Kucing Ganteng</string>
    <string name="edit_account">Edit account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="history_scan">Scan History</string>
    <string name="night_mode">Night mode</string>
    <string name="edit_profile">Edit Profile\n</string>
    <string name="change_picture">Change Picture</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_fill">Please fill the credentials</string>
    <string name="please_wait">Please Wait</string>
    <string name="failed_login">Login Failed</string>
    <string name="logout_confirmation">Are you sure you want to quit?</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="email">Email</string>
    <string name="input_password">Enter Password\n</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="error_invalid_email">Incorrect Email Format\n</string>
    <string name="error_password_length">Password at least 8 characters</string>
    <string name="error_email_empty">Empty Email</string>
    <string name="error_password_empty">Blank password</string>
    <string name="profile_name">Mutiara Nur Zarima</string>
    <string name="halo">Hello</string>
    <string name="product_name">Teh Pucuk Harum</string>
    <string name="text_sugar">Consumption of sugar: </string>
    <string name="media_cover">Media</string>
    <string name="sugar_consume">39 gr</string>
    <string name="date">15 Desember 2020</string>
    <string name="news_name">Sugar is dangerous!</string>
    <string name="news_description">Sugar is dangerous if its too much!</string>
    <string name="add_consumption">Add to consumption</string>
    <string name="back_to_camera">Return to camera</string>
    <string name="failed_update_data">Failed to update data</string>
    <string name="success_update_profile">Successfully Update the Data</string>
    <string name="success_save_history">Successfully save the data</string>
    <string name="sugar_in_bottle">Amount of sugar per bottle: </string>
    <string name="title_recommendation">Recommendation Product</string>
    <string name="failed_register">Registration failed</string>
    <string name="error_name_empty">name cannot be empty</string>
    <string name="error_invalid_weight">weight cannot be empty</string>
    <string name="error_invalid_height">height cannot be empty</string>
    <string name="error_invalid_age">age must not be empty</string>
</resources>