<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Back Button -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_marginTop="25dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/titleEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/img"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircleImageShape"
            app:layout_constraintTop_toBottomOf="@id/titleEditProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvChangePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_picture"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:alpha="1"
            tools:alpha="100"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePicture" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:alpha="1"
            tools:alpha="100"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            app:boxStrokeWidth="2dp"
            app:shapeAppearanceOverlay="@style/RoundedCornerShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/your_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/height"
            android:textColor="@color/black"
            android:alpha="1"
            tools:alpha="100"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:alpha="1"
            tools:alpha="100"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTextView"
            app:boxStrokeWidth="2dp"
            app:shapeAppearanceOverlay="@style/RoundedCornerShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/height"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:alpha="1"
            tools:alpha="100"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/heightEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:alpha="1"
            tools:alpha="100"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightTextView"
            app:boxStrokeWidth="2dp"
            app:shapeAppearanceOverlay="@style/RoundedCornerShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/weight"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/age"
            android:textColor="@color/black"
            android:alpha="1"
            tools:alpha="100"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/weightEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:alpha="1"
            tools:alpha="100"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView"
            app:boxStrokeWidth="2dp"
            app:shapeAppearanceOverlay="@style/RoundedCornerShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/age"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="#FF6B6B"
            android:text="@string/update"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedCornerShape"
            app:layout_constraintTop_toBottomOf="@+id/ageEditTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>