<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            tools:text="@string/product_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_toStartOf="@id/tvTime"
            card_view:layout_constraintEnd_toStartOf="@id/tvTime"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="14:30"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/tvProductName"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:text="@string/text_sugar"
            android:textSize="14sp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvDetailSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="10dp"
            android:text="@string/sugar_consume"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvSugar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>