<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/recommendationPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/product_name"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintVertical_bias="0.02"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/recommendationTitle"
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/product_name"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:lines="2"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/recommendationPhoto"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:text="@string/sugar_in_bottle"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#6A6A6A"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/recommendationTitle" />

        <TextView
            android:id="@+id/tvDetailSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingHorizontal="10dp"
            android:text="@string/sugar_consume"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#6A6A6A"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvSugar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>