<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.auth.signup.SignUpFragment">

    <ImageView
        android:id="@+id/topwave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/top_wave_login"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
    android:id="@+id/sign_in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:fontFamily="@font/inter_bold"
    android:textSize="24sp"
    android:text="@string/sign_in"
    app:layout_constraintBottom_toBottomOf="@+id/topwave"
    app:layout_constraintStart_toStartOf="@+id/topwave"
    app:layout_constraintTop_toTopOf="@+id/topwave"
    android:textColor="@color/black"
    app:layout_constraintVertical_bias="0.793" />

<TextView
    android:id="@+id/sign_in_fill"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textSize="12sp"
    android:textColor="@color/grayBlueLight"
    android:text="@string/sign_in_fill"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.116"
    app:layout_constraintStart_toStartOf="@+id/topwave"
    app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomwave"
        app:layout_constraintTop_toBottomOf="@+id/topwave"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="100dp"
        tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_oauth"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_medium"
        android:hint="Email"
        android:textSize="12sp"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="#CBD4D8" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="#CBD4D8"
        android:background="@drawable/background_oauth"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:textSize="12sp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp" />
</LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_blue"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/bottomwave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bottomwave"
        app:layout_constraintTop_toTopOf="@id/bottomwave"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dont have an account?"
        android:textColor="#CBD4D8"
        android:textSize="12sp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toBottomOf="@+id/bottomwave"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomwave"
        app:layout_constraintEnd_toEndOf="@+id/tv_dont_have_account"
        app:layout_constraintStart_toStartOf="@+id/tv_dont_have_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_account"
        app:layout_constraintVertical_bias="0.105" />

    <ImageView
        android:id="@+id/bottomwave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/bottom_wave_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="179dp" />
</androidx.constraintlayout.widget.ConstraintLayout>